# Point-SAM

./: .gitignore  README.md  pyproject.toml
PartSAM/: commons.py  ply_utils.py
PartSAM/model/: build.py  common.py  loss.py  mask_decoder.py  pc_encoder.py  pc_sam.py  prompt_encoder.py  transformer.py
PartSAM/utils/: torch_utils.py
configs/: partsam.yaml
evaluation/: eval_everypart.py
partfield/: dataloader.py  model_trainer_pvcnn_only_demo.py  utils.py
partfield/config/: __init__.py  defaults.py
partfield/model/: model_utils.py  triplane.py
partfield/model/PVCNN/: conv_pointnet.py  dnnlib_util.py  encoder_pc.py  pc_encoder.py  unet_3daware.py
partfield/model/PVCNN/pv_module/: ball_query.py  frustum.py  pointnet.py  pvconv.py  shared_mlp.py  voxelization.py
partfield/model/UNet/: buildingblocks.py  model.py
utils/: ValDataset.py  aug.py  infer_utils.py  point.py
